--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
+psutil==5.9.5
 pandas==2.0.3
 requests==2.31.0
 python-dotenv==1.0.0
-pytest==7.4.0
-pytest-mock==3.11.1
-flake8==6.0.0
-black==23.7.0
